chore: New Crowdin updates (#2604)
Co-authored-by: Michal <miso.szorad@gmail.com>

--- a/apps/wallet-mobile/src/i18n/locales/cs-CZ.json
+++ b/apps/wallet-mobile/src/i18n/locales/cs-CZ.json
@@ -19,6 +19,9 @@
   "analytics.private": "We <b>cannot</b> access private keys",
   "analytics.skip": "Skip",
   "analytics.toggle": "Allow Yoroi analytics",
+  "analytics.selectLanguage": "Select Language",
+  "analytics.tosIAgreeWith": "I agree with",
+  "analytics.tosAgreement": "Terms Of Service Agreement",
   "components.common.errormodal.hideError": "Skrýt chybovou hlášku",
   "components.common.errormodal.showError": "Zobrazit chybovou hlášku",
   "components.common.fingerprintscreenbase.welcomeMessage": "Vítejte zpět",
@@ -76,15 +79,16 @@
   "components.delegationsummary.warningbanner.message": "Poslední ITN odměny byly distribuovány v epoše 190. Odměny mohou být vymáhány na mainnetu, po spuštění Shelley éry.",
   "components.delegationsummary.warningbanner.message2": "Vaše ITN odměna a zůstatek nemusí být zobrazeny korektně, nicméně informace o nich jsou bezpečně zapsány v ITN blockchainu.",
   "components.delegationsummary.warningbanner.title": "Poznámka:",
-  "components.firstrun.acepttermsofservicescreen.aggreeClause": "Souhlasím s podmínkami užití",
-  "components.firstrun.acepttermsofservicescreen.continueButton": "Přijímám",
-  "components.firstrun.acepttermsofservicescreen.savingConsentModalTitle": "Inicializace",
-  "components.firstrun.acepttermsofservicescreen.title": "Podmínky užití",
-  "components.firstrun.custompinscreen.pinConfirmationTitle": "Zopakovat PIN",
-  "components.firstrun.custompinscreen.pinInputSubtitle": "Vybrat nový PIN pro rychlý přístup do peněženky.",
-  "components.firstrun.custompinscreen.pinInputTitle": "Zadejte PIN",
-  "components.firstrun.custompinscreen.title": "Nastavit PIN",
-  "components.firstrun.languagepicker.title": "Select Language",
+  "components.initialization.acepttermsofservicescreen.aggreeClause": "Souhlasím s podmínkami užití",
+  "components.initialization.acepttermsofservicescreen.continueButton": "Přijímám",
+  "components.initialization.acepttermsofservicescreen.savingConsentModalTitle": "Inicializace",
+  "components.initialization.acepttermsofservicescreen.title": "Podmínky užití",
+  "components.initialization.custompinscreen.pinConfirmationTitle": "Zopakovat PIN",
+  "components.initialization.custompinscreen.pinInputSubtitle": "Vybrat nový PIN pro rychlý přístup do peněženky.",
+  "components.firstrun.custompinscreen.pinInputConfirmationSubTitle": "Repeat a new PIN to quickly access your wallet",
+  "components.initialization.custompinscreen.pinInputTitle": "Zadejte PIN",
+  "components.initialization.custompinscreen.title": "Nastavit PIN",
+  "components.initialization.languagepicker.title": "Select Language",
   "components.ledger.ledgerconnect.usbDeviceReady": "USB zařízení je připraveno, klikněte na Potvrdit k pokračování.",
   "components.ledger.ledgertransportswitchmodal.bluetoothButton": "Připojit přes Bluetooth",
   "components.ledger.ledgertransportswitchmodal.bluetoothExplanation": "Vyberte tuto možnost pokud chcete připojit Ledger Nano X pomocí Bluetooth:",
@@ -652,5 +656,16 @@
   "utils.format.yesterday": "Včera",
   "global.network": "Network",
   "global.commit": "Commit",
-  "global.currentVersion": "Current Version"
+  "global.currentVersion": "Current Version",
+  "global.title": "Language",
+  "global.search": "Search",
+  "global.continue": "Continue",
+  "components.yoroiLogo": "Light wallet for Cardano assets",
+  "termsOfService.agreementUpdateTitle": "Terms of Service Agreement Update",
+  "termsOfService.agreementUpdateDescription": "We have updated our Terms of Service Agreement to enhance your experience. Please review and accept them to keep enjoying Yoroi.",
+  "termsOfService.tosIAgreeWith": "I agree with",
+  "termsOfService.tosAgreement": "Terms Of Service Agreement",
+  "toggleAnalyticsSettings.analyticsTitle": "User Insights",
+  "termsOfService.privacyPolicyTitle": "Privacy Policy",
+  "analytics.privacyPolicy": "Privacy Policy"
 }
