--- a/apps/wallet-mobile/src/i18n/locales/de-DE.json
+++ b/apps/wallet-mobile/src/i18n/locales/de-DE.json
@@ -19,6 +19,9 @@
   "analytics.private": "We <b>cannot</b> access private keys",
   "analytics.skip": "Skip",
   "analytics.toggle": "Allow Yoroi analytics",
+  "analytics.selectLanguage": "Select Language",
+  "analytics.tosIAgreeWith": "I agree with",
+  "analytics.tosAgreement": "Terms Of Service Agreement",
   "components.common.errormodal.hideError": "Fehlermeldung verstecken",
   "components.common.errormodal.showError": "Fehlermeldung zeigen",
   "components.common.fingerprintscreenbase.welcomeMessage": "Willkommen zurück",
@@ -76,15 +79,16 @@
   "components.delegationsummary.warningbanner.message": "Die letzten ITN Erträge wurden in Epoche 190 ausbezahlt. Erträge können im Mainnet beantragt werden sobald Shelley im Mainnet veröfföntlicht wurde.",
   "components.delegationsummary.warningbanner.message2": "Deine ITN Wallet Erträge und der Kontostand werden vielleicht nicht korrekt angezeigt. Die Information ist aber immer sicher in der ITN Blockchain gespeichert. ",
   "components.delegationsummary.warningbanner.title": "Notiz:",
-  "components.firstrun.acepttermsofservicescreen.aggreeClause": "Ich stimme den Nutzungsbestimmungen zu",
-  "components.firstrun.acepttermsofservicescreen.continueButton": "Akzeptieren",
-  "components.firstrun.acepttermsofservicescreen.savingConsentModalTitle": "Initialisierung",
-  "components.firstrun.acepttermsofservicescreen.title": "Allgemeine Nutzungsbedingungen",
-  "components.firstrun.custompinscreen.pinConfirmationTitle": "PIN wiederholen",
-  "components.firstrun.custompinscreen.pinInputSubtitle": "Wähle eine neue PIN für den Schnellzugriff auf die Wallet.",
-  "components.firstrun.custompinscreen.pinInputTitle": "PIN eingeben",
-  "components.firstrun.custompinscreen.title": "PIN setzen",
-  "components.firstrun.languagepicker.title": "Select Language",
+  "components.initialization.acepttermsofservicescreen.aggreeClause": "Ich stimme den Nutzungsbestimmungen zu",
+  "components.initialization.acepttermsofservicescreen.continueButton": "Akzeptieren",
+  "components.initialization.acepttermsofservicescreen.savingConsentModalTitle": "Initialisierung",
+  "components.initialization.acepttermsofservicescreen.title": "Allgemeine Nutzungsbedingungen",
+  "components.initialization.custompinscreen.pinConfirmationTitle": "PIN wiederholen",
+  "components.initialization.custompinscreen.pinInputSubtitle": "Wähle eine neue PIN für den Schnellzugriff auf die Wallet.",
+  "components.firstrun.custompinscreen.pinInputConfirmationSubTitle": "Repeat a new PIN to quickly access your wallet",
+  "components.initialization.custompinscreen.pinInputTitle": "PIN eingeben",
+  "components.initialization.custompinscreen.title": "PIN setzen",
+  "components.initialization.languagepicker.title": "Select Language",
   "components.ledger.ledgerconnect.usbDeviceReady": "USB Gerät ist Einsatzbereit. Bitte drücke auf Bestätigen.",
   "components.ledger.ledgertransportswitchmodal.bluetoothButton": "Verbinde mit Bluetooth",
   "components.ledger.ledgertransportswitchmodal.bluetoothExplanation": "Wähle diese Option, wenn Du eine Verbindung zu einem Ledger Nano Modell X über Bluetooth herstellen willst:",
@@ -652,5 +656,16 @@
   "utils.format.yesterday": "Gestern",
   "global.network": "Network",
   "global.commit": "Commit",
-  "global.currentVersion": "Current Version"
+  "global.currentVersion": "Current Version",
+  "global.title": "Language",
+  "global.search": "Search",
+  "global.continue": "Continue",
+  "components.yoroiLogo": "Light wallet for Cardano assets",
+  "termsOfService.agreementUpdateTitle": "Terms of Service Agreement Update",
+  "termsOfService.agreementUpdateDescription": "We have updated our Terms of Service Agreement to enhance your experience. Please review and accept them to keep enjoying Yoroi.",
+  "termsOfService.tosIAgreeWith": "I agree with",
+  "termsOfService.tosAgreement": "Terms Of Service Agreement",
+  "toggleAnalyticsSettings.analyticsTitle": "User Insights",
+  "termsOfService.privacyPolicyTitle": "Privacy Policy",
+  "analytics.privacyPolicy": "Privacy Policy"
 }
