--- a/apps/wallet-mobile/src/i18n/locales/id-ID.json
+++ b/apps/wallet-mobile/src/i18n/locales/id-ID.json
@@ -19,6 +19,9 @@
   "analytics.private": "We <b>cannot</b> access private keys",
   "analytics.skip": "Skip",
   "analytics.toggle": "Allow Yoroi analytics",
+  "analytics.selectLanguage": "Select Language",
+  "analytics.tosIAgreeWith": "I agree with",
+  "analytics.tosAgreement": "Terms Of Service Agreement",
   "components.common.errormodal.hideError": "Hide error message",
   "components.common.errormodal.showError": "Show error message",
   "components.common.fingerprintscreenbase.welcomeMessage": "Welcome Back",
@@ -76,15 +79,16 @@
   "components.delegationsummary.warningbanner.message": "The last ITN rewards were distributed on epoch 190. Rewards can be claimed on mainnet once Shelley is released on mainnet.",
   "components.delegationsummary.warningbanner.message2": "Your ITN wallet rewards and balance may not be correctly displayed, but this information is still securely stored in the ITN blockchain.",
   "components.delegationsummary.warningbanner.title": "Note:",
-  "components.firstrun.acepttermsofservicescreen.aggreeClause": "I agree with the Terms of Service",
-  "components.firstrun.acepttermsofservicescreen.continueButton": "Terima",
-  "components.firstrun.acepttermsofservicescreen.savingConsentModalTitle": "Menginisialisasi",
-  "components.firstrun.acepttermsofservicescreen.title": "Perjanjian Ketentuan Layanan",
-  "components.firstrun.custompinscreen.pinConfirmationTitle": "Ulangi PIN",
-  "components.firstrun.custompinscreen.pinInputSubtitle": "Choose a new PIN to quickly access your wallet.",
-  "components.firstrun.custompinscreen.pinInputTitle": "Masukkan PIN",
-  "components.firstrun.custompinscreen.title": "Atur PIN",
-  "components.firstrun.languagepicker.title": "Select Language",
+  "components.initialization.acepttermsofservicescreen.aggreeClause": "I agree with the Terms of Service",
+  "components.initialization.acepttermsofservicescreen.continueButton": "Terima",
+  "components.initialization.acepttermsofservicescreen.savingConsentModalTitle": "Menginisialisasi",
+  "components.initialization.acepttermsofservicescreen.title": "Perjanjian Ketentuan Layanan",
+  "components.initialization.custompinscreen.pinConfirmationTitle": "Ulangi PIN",
+  "components.initialization.custompinscreen.pinInputSubtitle": "Choose a new PIN to quickly access your wallet.",
+  "components.firstrun.custompinscreen.pinInputConfirmationSubTitle": "Repeat a new PIN to quickly access your wallet",
+  "components.initialization.custompinscreen.pinInputTitle": "Masukkan PIN",
+  "components.initialization.custompinscreen.title": "Atur PIN",
+  "components.initialization.languagepicker.title": "Select Language",
   "components.ledger.ledgerconnect.usbDeviceReady": "USB device is ready, please tap on Confirm to continue.",
   "components.ledger.ledgertransportswitchmodal.bluetoothButton": "Connect with Bluetooth",
   "components.ledger.ledgertransportswitchmodal.bluetoothExplanation": "Choose this option if you want to connect to a Ledger Nano model X through Bluetooth:",
@@ -652,5 +656,16 @@
   "utils.format.yesterday": "Kemarin",
   "global.network": "Network",
   "global.commit": "Commit",
-  "global.currentVersion": "Current Version"
+  "global.currentVersion": "Current Version",
+  "global.title": "Language",
+  "global.search": "Search",
+  "global.continue": "Continue",
+  "components.yoroiLogo": "Light wallet for Cardano assets",
+  "termsOfService.agreementUpdateTitle": "Terms of Service Agreement Update",
+  "termsOfService.agreementUpdateDescription": "We have updated our Terms of Service Agreement to enhance your experience. Please review and accept them to keep enjoying Yoroi.",
+  "termsOfService.tosIAgreeWith": "I agree with",
+  "termsOfService.tosAgreement": "Terms Of Service Agreement",
+  "toggleAnalyticsSettings.analyticsTitle": "User Insights",
+  "termsOfService.privacyPolicyTitle": "Privacy Policy",
+  "analytics.privacyPolicy": "Privacy Policy"
 }
