--- a/apps/wallet-mobile/src/i18n/locales/it-IT.json
+++ b/apps/wallet-mobile/src/i18n/locales/it-IT.json
@@ -19,6 +19,9 @@
   "analytics.private": "We <b>cannot</b> access private keys",
   "analytics.skip": "Skip",
   "analytics.toggle": "Allow Yoroi analytics",
+  "analytics.selectLanguage": "Select Language",
+  "analytics.tosIAgreeWith": "I agree with",
+  "analytics.tosAgreement": "Terms Of Service Agreement",
   "components.common.errormodal.hideError": "Nascondi messaggio di errore",
   "components.common.errormodal.showError": "Mostra messaggio di errore",
   "components.common.fingerprintscreenbase.welcomeMessage": "Ben tornato",
@@ -76,15 +79,16 @@
   "components.delegationsummary.warningbanner.message": "Gli ultimi premi ITN sono stati distribuiti durante l'epoca 190. I premi possono essere reclamati su mainnet una volta che Shelley è stata rilasciata su mainnet.",
   "components.delegationsummary.warningbanner.message2": "I premi e il saldo del tuo portafoglio ITN potrebbero non essere visualizzati correttamente, ma queste informazioni sono ancora archiviate in modo sicuro nella blockchain ITN",
   "components.delegationsummary.warningbanner.title": "Nota:",
-  "components.firstrun.acepttermsofservicescreen.aggreeClause": "Accetto i Termini di Servizio",
-  "components.firstrun.acepttermsofservicescreen.continueButton": "Accetto",
-  "components.firstrun.acepttermsofservicescreen.savingConsentModalTitle": "Inizializzazione",
-  "components.firstrun.acepttermsofservicescreen.title": "Accordo sui termini di servizio",
-  "components.firstrun.custompinscreen.pinConfirmationTitle": "Ripeti il PIN",
-  "components.firstrun.custompinscreen.pinInputSubtitle": "Scegli un nuovo PIN per l'accesso rapido al portafoglio.",
-  "components.firstrun.custompinscreen.pinInputTitle": "Inserisci il PIN",
-  "components.firstrun.custompinscreen.title": "Imposta il PIN",
-  "components.firstrun.languagepicker.title": "Select Language",
+  "components.initialization.acepttermsofservicescreen.aggreeClause": "Accetto i Termini di Servizio",
+  "components.initialization.acepttermsofservicescreen.continueButton": "Accetto",
+  "components.initialization.acepttermsofservicescreen.savingConsentModalTitle": "Inizializzazione",
+  "components.initialization.acepttermsofservicescreen.title": "Accordo sui termini di servizio",
+  "components.initialization.custompinscreen.pinConfirmationTitle": "Ripeti il PIN",
+  "components.initialization.custompinscreen.pinInputSubtitle": "Scegli un nuovo PIN per l'accesso rapido al portafoglio.",
+  "components.firstrun.custompinscreen.pinInputConfirmationSubTitle": "Repeat a new PIN to quickly access your wallet",
+  "components.initialization.custompinscreen.pinInputTitle": "Inserisci il PIN",
+  "components.initialization.custompinscreen.title": "Imposta il PIN",
+  "components.initialization.languagepicker.title": "Select Language",
   "components.ledger.ledgerconnect.usbDeviceReady": "Il dispositivo USB è pronto, cliccare su Conferma per continuare.",
   "components.ledger.ledgertransportswitchmodal.bluetoothButton": "Connettiti con Bluetooth",
   "components.ledger.ledgertransportswitchmodal.bluetoothExplanation": "Scegliere questa opzione se si desidera connettere ad un Ledger Nano modello X tramite Bluetooth:",
@@ -652,5 +656,16 @@
   "utils.format.yesterday": "Ieri",
   "global.network": "Network",
   "global.commit": "Commit",
-  "global.currentVersion": "Current Version"
+  "global.currentVersion": "Current Version",
+  "global.title": "Language",
+  "global.search": "Search",
+  "global.continue": "Continue",
+  "components.yoroiLogo": "Light wallet for Cardano assets",
+  "termsOfService.agreementUpdateTitle": "Terms of Service Agreement Update",
+  "termsOfService.agreementUpdateDescription": "We have updated our Terms of Service Agreement to enhance your experience. Please review and accept them to keep enjoying Yoroi.",
+  "termsOfService.tosIAgreeWith": "I agree with",
+  "termsOfService.tosAgreement": "Terms Of Service Agreement",
+  "toggleAnalyticsSettings.analyticsTitle": "User Insights",
+  "termsOfService.privacyPolicyTitle": "Privacy Policy",
+  "analytics.privacyPolicy": "Privacy Policy"
 }
