--- a/apps/wallet-mobile/src/i18n/locales/nl-NL.json
+++ b/apps/wallet-mobile/src/i18n/locales/nl-NL.json
@@ -19,6 +19,9 @@
   "analytics.private": "Wij kunnen <b.NIET</b> bij uw privé sleutels",
   "analytics.skip": "Overslaan",
   "analytics.toggle": "Yoroi analyse toestaan",
+  "analytics.selectLanguage": "Select Language",
+  "analytics.tosIAgreeWith": "I agree with",
+  "analytics.tosAgreement": "Terms Of Service Agreement",
   "components.common.errormodal.hideError": "Verberg de foutboodschap",
   "components.common.errormodal.showError": "Toon de foutboodschap",
   "components.common.fingerprintscreenbase.welcomeMessage": "Welkom terug",
@@ -76,15 +79,16 @@
   "components.delegationsummary.warningbanner.message": "De laatste ITN-beloningen werden toegewezen in periode 190. Beloningen kunnen worden opgeëist op publieke net zodra Shelley wordt vrijgegeven op het publieke net.",
   "components.delegationsummary.warningbanner.message2": "De beloningen en het saldo van uw ITN-portemonnee worden mogelijk niet correct weergegeven, maar deze informatie wordt nog steeds veilig opgeslagen in de I.T.N. Blockchain.",
   "components.delegationsummary.warningbanner.title": "Opmerking:",
-  "components.firstrun.acepttermsofservicescreen.aggreeClause": "Ik ga akkoord met de servicevoorwaarden",
-  "components.firstrun.acepttermsofservicescreen.continueButton": "Accepteren",
-  "components.firstrun.acepttermsofservicescreen.savingConsentModalTitle": "Initialiseren",
-  "components.firstrun.acepttermsofservicescreen.title": "Algemene voorwaarden",
-  "components.firstrun.custompinscreen.pinConfirmationTitle": "Herhaal de Pincode",
-  "components.firstrun.custompinscreen.pinInputSubtitle": "Kies een nieuwe PIN code om snel toegang tot uw portemonnee te krijgen.",
-  "components.firstrun.custompinscreen.pinInputTitle": "Voer de pincode in",
-  "components.firstrun.custompinscreen.title": "Bepaal de pincode",
-  "components.firstrun.languagepicker.title": "Kies uw taal",
+  "components.initialization.acepttermsofservicescreen.aggreeClause": "Ik ga akkoord met de servicevoorwaarden",
+  "components.initialization.acepttermsofservicescreen.continueButton": "Accepteren",
+  "components.initialization.acepttermsofservicescreen.savingConsentModalTitle": "Initialiseren",
+  "components.initialization.acepttermsofservicescreen.title": "Algemene voorwaarden",
+  "components.initialization.custompinscreen.pinConfirmationTitle": "Herhaal de Pincode",
+  "components.initialization.custompinscreen.pinInputSubtitle": "Kies een nieuwe PIN code om snel toegang tot uw portemonnee te krijgen.",
+  "components.firstrun.custompinscreen.pinInputConfirmationSubTitle": "Repeat a new PIN to quickly access your wallet",
+  "components.initialization.custompinscreen.pinInputTitle": "Voer de pincode in",
+  "components.initialization.custompinscreen.title": "Bepaal de pincode",
+  "components.initialization.languagepicker.title": "Kies uw taal",
   "components.ledger.ledgerconnect.usbDeviceReady": "USB apparaat is klaar, druk op \"Bevestigen\" om door te gaan",
   "components.ledger.ledgertransportswitchmodal.bluetoothButton": "Verbindt met Bluetooth",
   "components.ledger.ledgertransportswitchmodal.bluetoothExplanation": "Kies deze optie als je wilt verbinden met een Ledger Nano Model X via Bluetooth:",
@@ -652,5 +656,16 @@
   "utils.format.yesterday": "Gisteren",
   "global.network": "Network",
   "global.commit": "Commit",
-  "global.currentVersion": "Current Version"
+  "global.currentVersion": "Current Version",
+  "global.title": "Language",
+  "global.search": "Search",
+  "global.continue": "Continue",
+  "components.yoroiLogo": "Light wallet for Cardano assets",
+  "termsOfService.agreementUpdateTitle": "Terms of Service Agreement Update",
+  "termsOfService.agreementUpdateDescription": "We have updated our Terms of Service Agreement to enhance your experience. Please review and accept them to keep enjoying Yoroi.",
+  "termsOfService.tosIAgreeWith": "I agree with",
+  "termsOfService.tosAgreement": "Terms Of Service Agreement",
+  "toggleAnalyticsSettings.analyticsTitle": "User Insights",
+  "termsOfService.privacyPolicyTitle": "Privacy Policy",
+  "analytics.privacyPolicy": "Privacy Policy"
 }
