--- a/apps/wallet-mobile/src/i18n/locales/pt-BR.json
+++ b/apps/wallet-mobile/src/i18n/locales/pt-BR.json
@@ -19,6 +19,9 @@
   "analytics.private": "We <b>cannot</b> access private keys",
   "analytics.skip": "Skip",
   "analytics.toggle": "Allow Yoroi analytics",
+  "analytics.selectLanguage": "Select Language",
+  "analytics.tosIAgreeWith": "I agree with",
+  "analytics.tosAgreement": "Terms Of Service Agreement",
   "components.common.errormodal.hideError": "Ocultar erro",
   "components.common.errormodal.showError": "Exibir erro",
   "components.common.fingerprintscreenbase.welcomeMessage": "Bem vindo de volta",
@@ -76,15 +79,16 @@
   "components.delegationsummary.warningbanner.message": "As últimas recompensas ITN foram distribuídas na época 190. Recompensas podem ser reivindicadas na rede principal assim que Shelley for lançado na rede principal.",
   "components.delegationsummary.warningbanner.message2": "Suas recompensas e saldo da carteira ITN podem não ser exibidos corretamente, mas essas informações ainda são armazenadas com segurança na blockchain ITN.",
   "components.delegationsummary.warningbanner.title": "Nota:",
-  "components.firstrun.acepttermsofservicescreen.aggreeClause": "Eu concordo com os Termos de Serviço",
-  "components.firstrun.acepttermsofservicescreen.continueButton": "Aceito",
-  "components.firstrun.acepttermsofservicescreen.savingConsentModalTitle": "Iniciando",
-  "components.firstrun.acepttermsofservicescreen.title": "Acordo de Termos de Serviço",
-  "components.firstrun.custompinscreen.pinConfirmationTitle": "Repita o código (PIN)",
-  "components.firstrun.custompinscreen.pinInputSubtitle": "Escolha um novo código (PIN) para acessar sua carteira",
-  "components.firstrun.custompinscreen.pinInputTitle": "Insira o código (PIN)",
-  "components.firstrun.custompinscreen.title": "Crie o seu código (PIN)",
-  "components.firstrun.languagepicker.title": "Selecione o idioma",
+  "components.initialization.acepttermsofservicescreen.aggreeClause": "Eu concordo com os Termos de Serviço",
+  "components.initialization.acepttermsofservicescreen.continueButton": "Aceito",
+  "components.initialization.acepttermsofservicescreen.savingConsentModalTitle": "Iniciando",
+  "components.initialization.acepttermsofservicescreen.title": "Acordo de Termos de Serviço",
+  "components.initialization.custompinscreen.pinConfirmationTitle": "Repita o código (PIN)",
+  "components.initialization.custompinscreen.pinInputSubtitle": "Escolha um novo código (PIN) para acessar sua carteira",
+  "components.firstrun.custompinscreen.pinInputConfirmationSubTitle": "Repeat a new PIN to quickly access your wallet",
+  "components.initialization.custompinscreen.pinInputTitle": "Insira o código (PIN)",
+  "components.initialization.custompinscreen.title": "Crie o seu código (PIN)",
+  "components.initialization.languagepicker.title": "Selecione o idioma",
   "components.ledger.ledgerconnect.usbDeviceReady": "O dispositivo USB está pronto, toque em Confirmar para continuar.",
   "components.ledger.ledgertransportswitchmodal.bluetoothButton": "Conectar via Bluetooth",
   "components.ledger.ledgertransportswitchmodal.bluetoothExplanation": "Escolha esta opção para conectar-se a uma Ledger Nano modelo X via Bluetooth:",
@@ -652,5 +656,16 @@
   "utils.format.yesterday": "Ontem",
   "global.network": "Network",
   "global.commit": "Commit",
-  "global.currentVersion": "Current Version"
+  "global.currentVersion": "Current Version",
+  "global.title": "Language",
+  "global.search": "Search",
+  "global.continue": "Continue",
+  "components.yoroiLogo": "Light wallet for Cardano assets",
+  "termsOfService.agreementUpdateTitle": "Terms of Service Agreement Update",
+  "termsOfService.agreementUpdateDescription": "We have updated our Terms of Service Agreement to enhance your experience. Please review and accept them to keep enjoying Yoroi.",
+  "termsOfService.tosIAgreeWith": "I agree with",
+  "termsOfService.tosAgreement": "Terms Of Service Agreement",
+  "toggleAnalyticsSettings.analyticsTitle": "User Insights",
+  "termsOfService.privacyPolicyTitle": "Privacy Policy",
+  "analytics.privacyPolicy": "Privacy Policy"
 }
