--- a/apps/wallet-mobile/src/i18n/locales/ru-RU.json
+++ b/apps/wallet-mobile/src/i18n/locales/ru-RU.json
@@ -19,6 +19,9 @@
   "analytics.private": "We <b>cannot</b> access private keys",
   "analytics.skip": "Skip",
   "analytics.toggle": "Allow Yoroi analytics",
+  "analytics.selectLanguage": "Select Language",
+  "analytics.tosIAgreeWith": "I agree with",
+  "analytics.tosAgreement": "Terms Of Service Agreement",
   "components.common.errormodal.hideError": "Скрыть сообщение ошибки",
   "components.common.errormodal.showError": "Показать сообщение ошибки",
   "components.common.fingerprintscreenbase.welcomeMessage": "С возвращением",
@@ -76,15 +79,16 @@
   "components.delegationsummary.warningbanner.message": "Последние награды СТС были распределены в эпоху 190. Награды можно будет получить на mainnet, как только Shelley будет выпущен на mainnet.",
   "components.delegationsummary.warningbanner.message2": "Ваша награда СТС кошелька и баланс могут отображаться неправильно, но эта информация по-прежнему защищено хранится в СТС блокчейне.",
   "components.delegationsummary.warningbanner.title": "Примечание:",
-  "components.firstrun.acepttermsofservicescreen.aggreeClause": "Я согласен с условиями использования",
-  "components.firstrun.acepttermsofservicescreen.continueButton": "Принять",
-  "components.firstrun.acepttermsofservicescreen.savingConsentModalTitle": "Инициализация",
-  "components.firstrun.acepttermsofservicescreen.title": "Соглашение о предоставлении услуг",
-  "components.firstrun.custompinscreen.pinConfirmationTitle": "Повторить PIN",
-  "components.firstrun.custompinscreen.pinInputSubtitle": "Выберите новый PIN для быстрого доступа к вашему кошельку",
-  "components.firstrun.custompinscreen.pinInputTitle": "Ввести PIN",
-  "components.firstrun.custompinscreen.title": "Установить PIN",
-  "components.firstrun.languagepicker.title": "Выберите язык",
+  "components.initialization.acepttermsofservicescreen.aggreeClause": "Я согласен с условиями использования",
+  "components.initialization.acepttermsofservicescreen.continueButton": "Принять",
+  "components.initialization.acepttermsofservicescreen.savingConsentModalTitle": "Инициализация",
+  "components.initialization.acepttermsofservicescreen.title": "Соглашение о предоставлении услуг",
+  "components.initialization.custompinscreen.pinConfirmationTitle": "Повторить PIN",
+  "components.initialization.custompinscreen.pinInputSubtitle": "Выберите новый PIN для быстрого доступа к вашему кошельку",
+  "components.firstrun.custompinscreen.pinInputConfirmationSubTitle": "Repeat a new PIN to quickly access your wallet",
+  "components.initialization.custompinscreen.pinInputTitle": "Ввести PIN",
+  "components.initialization.custompinscreen.title": "Установить PIN",
+  "components.initialization.languagepicker.title": "Выберите язык",
   "components.ledger.ledgerconnect.usbDeviceReady": "USB устройство готово, пожалуйста, нажмите Подтвердить, чтобы продолжить.",
   "components.ledger.ledgertransportswitchmodal.bluetoothButton": "Подключить по Bluetooth",
   "components.ledger.ledgertransportswitchmodal.bluetoothExplanation": "Выберите этот вариант если вы хотите подключить Ledger Nano модель X по Bluetooth",
@@ -652,5 +656,16 @@
   "utils.format.yesterday": "Вчера",
   "global.network": "Network",
   "global.commit": "Commit",
-  "global.currentVersion": "Current Version"
+  "global.currentVersion": "Current Version",
+  "global.title": "Language",
+  "global.search": "Search",
+  "global.continue": "Continue",
+  "components.yoroiLogo": "Light wallet for Cardano assets",
+  "termsOfService.agreementUpdateTitle": "Terms of Service Agreement Update",
+  "termsOfService.agreementUpdateDescription": "We have updated our Terms of Service Agreement to enhance your experience. Please review and accept them to keep enjoying Yoroi.",
+  "termsOfService.tosIAgreeWith": "I agree with",
+  "termsOfService.tosAgreement": "Terms Of Service Agreement",
+  "toggleAnalyticsSettings.analyticsTitle": "User Insights",
+  "termsOfService.privacyPolicyTitle": "Privacy Policy",
+  "analytics.privacyPolicy": "Privacy Policy"
 }
