--- a/apps/wallet-mobile/src/i18n/locales/es-ES.json
+++ b/apps/wallet-mobile/src/i18n/locales/es-ES.json
@@ -19,6 +19,9 @@
   "analytics.private": "We <b>cannot</b> access private keys",
   "analytics.skip": "Skip",
   "analytics.toggle": "Allow Yoroi analytics",
+  "analytics.selectLanguage": "Select Language",
+  "analytics.tosIAgreeWith": "I agree with",
+  "analytics.tosAgreement": "Terms Of Service Agreement",
   "components.common.errormodal.hideError": "Hide error message",
   "components.common.errormodal.showError": "Mostrar el mensaje de error",
   "components.common.fingerprintscreenbase.welcomeMessage": "Bienvenido nuevamente",
@@ -76,15 +79,16 @@
   "components.delegationsummary.warningbanner.message": "Las últimas recompensas de la ITN fueron distribuidas en el epoch 190. Las recompensas podrán ser reclamadas en la red principal (mainnet) una vez que Shelley sea lanzado.",
   "components.delegationsummary.warningbanner.message2": "Es posible que las recompensas y el saldo de tu billetera de la ITN no se muestren correctamente, sin embargo esta información permanece almacenada de forma segura en la blockchain de la ITN.",
   "components.delegationsummary.warningbanner.title": "Nota:",
-  "components.firstrun.acepttermsofservicescreen.aggreeClause": "Estoy de acuerdo con los términos de servicio.",
-  "components.firstrun.acepttermsofservicescreen.continueButton": "Aceptar",
-  "components.firstrun.acepttermsofservicescreen.savingConsentModalTitle": "Iniciando",
-  "components.firstrun.acepttermsofservicescreen.title": "Acuerdo de los Términos del Servicio",
-  "components.firstrun.custompinscreen.pinConfirmationTitle": "Repite tu PIN",
-  "components.firstrun.custompinscreen.pinInputSubtitle": "Elige un nuevo PIN para acceder de forma rápida a tu billetera.",
-  "components.firstrun.custompinscreen.pinInputTitle": "Ingresa tu PIN",
-  "components.firstrun.custompinscreen.title": "Establece un PIN",
-  "components.firstrun.languagepicker.title": "Seleccionar idioma",
+  "components.initialization.acepttermsofservicescreen.aggreeClause": "Estoy de acuerdo con los términos de servicio.",
+  "components.initialization.acepttermsofservicescreen.continueButton": "Aceptar",
+  "components.initialization.acepttermsofservicescreen.savingConsentModalTitle": "Iniciando",
+  "components.initialization.acepttermsofservicescreen.title": "Acuerdo de los Términos del Servicio",
+  "components.initialization.custompinscreen.pinConfirmationTitle": "Repite tu PIN",
+  "components.initialization.custompinscreen.pinInputSubtitle": "Elige un nuevo PIN para acceder de forma rápida a tu billetera.",
+  "components.firstrun.custompinscreen.pinInputConfirmationSubTitle": "Repeat a new PIN to quickly access your wallet",
+  "components.initialization.custompinscreen.pinInputTitle": "Ingresa tu PIN",
+  "components.initialization.custompinscreen.title": "Establece un PIN",
+  "components.initialization.languagepicker.title": "Seleccionar idioma",
   "components.ledger.ledgerconnect.usbDeviceReady": "El dispositivo USB está listo, por favor pulse en Confirmar para continuar.",
   "components.ledger.ledgertransportswitchmodal.bluetoothButton": "Conectar mediante Bluetooth",
   "components.ledger.ledgertransportswitchmodal.bluetoothExplanation": "Elige esta opción si quieres conectarte a un Ledger Nano modelo X usando bluetooth:",
@@ -652,5 +656,16 @@
   "utils.format.yesterday": "Ayer",
   "global.network": "Network",
   "global.commit": "Commit",
-  "global.currentVersion": "Current Version"
+  "global.currentVersion": "Current Version",
+  "global.title": "Language",
+  "global.search": "Search",
+  "global.continue": "Continue",
+  "components.yoroiLogo": "Light wallet for Cardano assets",
+  "termsOfService.agreementUpdateTitle": "Terms of Service Agreement Update",
+  "termsOfService.agreementUpdateDescription": "We have updated our Terms of Service Agreement to enhance your experience. Please review and accept them to keep enjoying Yoroi.",
+  "termsOfService.tosIAgreeWith": "I agree with",
+  "termsOfService.tosAgreement": "Terms Of Service Agreement",
+  "toggleAnalyticsSettings.analyticsTitle": "User Insights",
+  "termsOfService.privacyPolicyTitle": "Privacy Policy",
+  "analytics.privacyPolicy": "Privacy Policy"
 }
